--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="intro">
 								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
 								<header>
-									<h2>Future Imperfect</h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+									<h2>This Umreekan Life</h2>
+									<p>A podcast where we talk about the desi immigrant life in the US</a></p>
 								</header>
 							</section>
 
